Images added and recipes appear as grid

--- a/test1.html
+++ b/test1.html
@@ -3,14 +3,17 @@
 <html>
 	<head>
 		<title>Testing</title>
-		
+		<link rel="stylesheet" href="test1.css">
 	</head>
 
 	<body>
 		
-		<p>
-			Input here: <input id="input"></input>
-			<button>submit</button>
+		<p id="inputFields">
+			Ingredients: <input id="ingredientsInput"></input>
+			<br>
+			Number of recipes you'd like to see: <input id="numRecInput"></input>
+			<br>
+			<button onclick="getRecipes()">submit</button>
 		</p>
 
 		<script src='test1.js'></script>
