--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<title>Testing</title>
-		<link rel="stylesheet" href="test1.css">
+		<title>Home</title>
+		<link rel="stylesheet" href="index.css">
 	</head>
 
 	<body>
@@ -32,6 +32,6 @@
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src='test1.js'></script>
+		<script src='index.js'></script>
 	</body>
 </html>
