--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div id="formContainer">
 			<p id="inputFields">
-				<span id='formTitle'>Hungry?</span>
+				<span id='formTitle'>What's in your fridge?</span>
 				<br>
 				<br>
 				<input id="ingredientsInput" placeholder="What's in your fridge?" value="watermelon"></input>
