--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<div id="navContainer">
 				
 				<p id="logo">FRIGO</p>
+				<img id="logoImg" src="logo.png">
 
 			</div>
 
@@ -37,7 +38,8 @@
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://unpkg.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
-		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+		<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+<!-- 		<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script> -->
 		<script src='index.js'></script>
 	</body>
 </html>
