--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				<span id='formTitle'>Hungry?</span>
 				<br>
 				<br>
-				<input id="ingredientsInput" value="cheese" placeholder="What's in your fridge?"></input>
+				<input id="ingredientsInput" class="input" value="cheese" placeholder="What's in your fridge?"></input>
 				<br>
-				<button type="submit" id="search" onclick="getRecipes()">Search</button>
+				<button type="submit" id="search" onclick="main()">Search</button>
 			</p>
 		</div>
 		
