--- a/recipePage.html
+++ b/recipePage.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Recipe Page</title>
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="recipePage.css">
 	</head>
 
 	<body>
@@ -12,7 +12,8 @@
 
 			<div id="navContainer">
 				
-				<p id="logo">FRIGO</p>
+				<a href="index.html" id="logo">FRIGO</a>
+				<img id="logoImg" src="logo.png">
 
 			</div>
 
