--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<head>
 		<title>Frigo</title>
 		<link rel="stylesheet" href="index.css">
-
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="manifest" href="manifest.json">
 		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
 		<meta name="theme-color" content="#ffffff">
 	</head>
 
@@ -26,8 +26,8 @@
 		</div>
 
 		<div id="formContainer">
-			<p id="inputFields">
-				<span id='formTitle'>Hungry?</span>
+			<p id="inputFields" class="shake-trigger">
+				<span id='formTitle' class="shake-constant">Hungry?</span>
 				<br>
 				<br>
 				<input id="ingredientsInput" class="input" value="cheese" placeholder="What's in your fridge?"></input>
