--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
 		<meta name="theme-color" content="#ffffff">
+		<meta name="viewport" content="width=device-width">
 	</head>
 
 	<body>
