Added instruction numbers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 		
-		<div id="nav">
+		<nav>
 
 			<div id="navContainer">
 				
@@ -24,7 +24,7 @@
 
 			</div>
 
-		</div>
+		</nav>
 
 		<div id="formContainer">
 			<p id="inputFields" class="shake-trigger">
