--- a/recipePage.html
+++ b/recipePage.html
@@ -13,7 +13,7 @@
 
 	<body>
 		
-		<div id="nav">
+		<nav id="nav">
 
 			<div id="navContainer">
 				
@@ -22,7 +22,7 @@
 
 			</div>
 
-		</div>
+		</nav>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src='index.js'></script>
