--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 		<link rel="manifest" href="manifest.json">
 		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
+		<link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<meta name="theme-color" content="#ffffff">
 		<meta name="viewport" content="width=device-width">
 	</head>
 
 	<body>
-		
+
 		<section class="top">
 
 			<nav>
 				<div id="navContainer">
-					<a href="index.html" id="logo">FRIGO</a>
-					<img id="logoImg" src="logo.png">
+					<a href="index.html" id="logo">frigo.</a>
+				<!-- <img id="logoImg" src="logo.png"> -->
 				</div>
 			</nav>
 
@@ -36,6 +37,7 @@
 			</div>
 
 		</section>
+
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="https://unpkg.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
