Rotating search added

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 	<head>
 		<title>Frigo</title>
 		<link rel="stylesheet" href="index.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="manifest" href="manifest.json">
-		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5"> -->
 		<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
 		<link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="viewport" content="width=device-width">
 	</head>
 
 	<body>
