--- a/recipePage.html
+++ b/recipePage.html
@@ -2,12 +2,13 @@
 
 <html>
 	<head>
-		<title>Recipe Page</title>
+		<title></title>
 		<link rel="stylesheet" href="recipePage.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="manifest" href="manifest.json">
 		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 		<meta name="theme-color" content="#ffffff">
 	</head>
 
@@ -17,8 +18,7 @@
 
 			<div id="navContainer">
 				
-				<a href="index.html" id="logo">FRIGO</a>
-				<img id="logoImg" src="logo.png">
+				<a href="index.html" id="logo">frigo.</a>
 
 			</div>
 
