--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 	<head>
 		<title>Frigo</title>
 		<link rel="stylesheet" href="index.css">
-		<!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-		<link rel="manifest" href="manifest.json">
-		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5"> -->
 		<link rel="stylesheet" type="text/css" href="http://csshake.surge.sh/csshake.min.css">
 		<link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	</head>
@@ -19,7 +15,6 @@
 			<nav>
 				<div id="navContainer">
 					<a href="index.html" id="logo">frigo.</a>
-				<!-- <img id="logoImg" src="logo.png"> -->
 				</div>
 			</nav>
 
@@ -28,9 +23,9 @@
 					<span id='formTitle' class="shake-constant">Hungry?</span>
 					<br>
 					<br>
-					<input id="ingredientsInput" class="input" value="cheese" placeholder="What's in your fridge?"></input>
+					<input id="ingredientsInput" class="input" placeholder="What's in your fridge?"></input>
 					<br>
-					<button type="submit" id="search" onclick="main()">Search</button>
+					<button type="submit" id="search" onclick="main()" data-loading-text="Loading...">Search</button>
 				</p>
 			</div>
 
